--- a/index.html
+++ b/index.html
@@ -7,3 +7,13 @@
 	<title>1st js project</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+
+<body>
+ <div class="box">
+<form>
+   <h1>Login Form</h1>
+  <div class="formgroup">
+<label for="">Email Address <br></label>
+<input type="email" value="hazel@javascript.com" id="emailid" class="form-control"> 
+</div>	
+	
