--- a/index.html
+++ b/index.html
@@ -17,3 +17,7 @@
 <input type="email" value="hazel@javascript.com" id="emailid" class="form-control"> 
 </div>	
 	
+ <div class="formgroup">
+<label for="">Password <br></label>
+<input type="password" value="javascript123" class="form-control" id="pass" > <br>
+<input type="checkbox" id="passfield" >
