--- a/index.html
+++ b/index.html
@@ -21,3 +21,13 @@
 <label for="">Password <br></label>
 <input type="password" value="javascript123" class="form-control" id="pass" > <br>
 <input type="checkbox" id="passfield" >
+
+</div>
+<button type="submit" class="but"  > Submit</button>
+</form>
+
+ </div>
+
+    <script src="script.js"></script>
+  </body>
+</html>	 
